# WebCache

./: .gitignore  LICENSE  README.md
Client/: LICENSE  README.md  fmt.sh  pyproject.toml  wcc.sh
Client/wcc/: __main__.py
Client/wcc/app/: app.py
Client/wcc/app/lib/: file_operations.py  http_method.py
Client/wcc/app/webcache_client/: api.py  schema.py  wcc.py
Service/: Dockerfile  docker-compose.yml  fmt.sh  pyproject.toml
Service/app/: factory.py
Service/app/api/cache/: router.py
Service/app/lib/: cache.py  webcache.py
Service/app/schemas/: schemas.py
