[tool.poetry]
name = "webcacheclient"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
pydantic = "^2.6.0"
typer = "^0.9.0"

[tool.poetry.group.DEV.dependencies]
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
flake8 = "^7.0.0"
autoflake = "^2.2.1"
black = "^24.1.1"
isort = "^5.13.2"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = false
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.flake8]
max-line-length = 80


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
